<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_arrow"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_arrow"
            android:title="@string/aljazera"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_arrow"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/foxNewsFragment"
            android:icon="@drawable/ic_baseline_arrow"
            android:title="@string/fox_news"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/skyNewsFragment"
            android:icon="@drawable/ic_baseline_arrow"
            android:title="@string/sky_news"
            android:menuCategory="secondary"/>
    </group>

    <item android:title="Upcoming"
        android:menuCategory="secondary">

        <menu>

            <item
                android:id="@+id/ny"
                android:icon="@drawable/ic_baseline_arrow"
                android:title="@string/new_york_times"
                android:menuCategory="secondary"/>

        </menu>
    </item>
</menu>